adding where the deck will go and a clear deck button

--- a/webpage_app/index.html
+++ b/webpage_app/index.html
@@ -19,14 +19,18 @@
             <fieldset>
                 <legend>Search For Magic Cards</legend>
                 <input id="searchImput" placeholder="Enter a card name" required />
-                <button>Search City</button>
+                <button>Add Card</button>
             </fieldset>
         </form>
 
         <section id="results" class="card">
-            <p>Awaiting card name</p>
+            <p>Awaiting card name...</p>
         </section>
-
+<section id="deck" class="card">
+            <h2>Your Deck</h2>
+            <ul id="deck-list"></ul>
+            <button>Clear Deck</button>
+        </section>
     </main>
 
     <!-- Your bundled JS file -->
