adding proper const values to the starter code and using them to hopefully have changed the code given and made it into a MTG card search instead

--- a/webpage_app/index.html
+++ b/webpage_app/index.html
@@ -29,12 +29,12 @@
 <section id="deck" class="card">
             <h2>Your Deck</h2>
             <ul id="deck-list"></ul>
-            <button>Clear Deck</button>
+            <button id="clear">Clear Deck</button>
         </section>
     </main>
 
     <!-- Your bundled JS file -->
-    <script src="dist/main.js"></script>
+    <script src="webpage_app/dist/main.js"></script>
 </body>
 
 </html>
