fixing some errors that happened in previous code

--- a/webpage_app/index.html
+++ b/webpage_app/index.html
@@ -19,6 +19,7 @@
             <fieldset>
                 <legend>Search For Magic Cards</legend>
                 <input id="searchImput" placeholder="Enter a card name" required />
+                <ul id="autocomplete-list" class="autocomplete"></ul>
                 <button>Add Card</button>
             </fieldset>
         </form>
@@ -34,7 +35,7 @@
     </main>
 
     <!-- Your bundled JS file -->
-    <script src="webpage_app/dist/main.js"></script>
+    <script src="dist/main.js"></script>
 </body>
 
 </html>
