--- a/webpage_app/index.html
+++ b/webpage_app/index.html
@@ -19,8 +19,7 @@
             <fieldset>
                 <legend>Search For Magic Cards</legend>
                 <input id="searchImput" placeholder="Enter a card name" required />
-                <ul id="autocomplete-list" class="autocomplete"></ul>
-                <button>Add Card</button>
+                <button id="addCard">Add Card</button>
             </fieldset>
         </form>
 
