adding a spot for the ramdom card to appear

--- a/webpage_app/index.html
+++ b/webpage_app/index.html
@@ -14,7 +14,13 @@
 <body>
     <main class="container">
         <h1>Magic The Gathering Deck Builder</h1>
-
+<section>
+        <h2> Get some insperation</h2>
+ <button id="randomCard">Get Random Card</button>
+        </section>
+        <section id="randomCardOutput">
+            
+        </section>
         <form id="card-search-form">
             <fieldset>
                 <legend>Search For Magic Cards</legend>
